Mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
name: mongo
labels:
app: mongo
spec:
ports:
- port: 27017
name: mongodb
selector:
app: mongo
clusterIP: None
