client-service.yaml
apiVersion: v1
kind: Service
metadata:
name: clients-api
labels:
app: clients-api
spec:
type: ClusterIP
ports:
- port: 8080
targetPort: 8080
protocol: TCP
name: http
selector:
app: clients-api
